--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teamgenerator",
+  "name": "c",
   "version": "1.0.0",
   "description": "# 10 Object-Oriented Programming: Team Profile Generator",
   "main": "index.js",
